# GBEmu

./: .gitignore  README.md  run.py
src/: CMakeLists.txt
src/include/: bus.h  cart.h  common.h  cpu.h  debug.h  dma.h  emu.h  gamepad.h  instructions.h  interrupts.h  io.h  lcd.h  ppu.h  stack.h  timer.h
src/lib/: bus.c  cart.c  cpu.c  cpu.fetch.c  cpu.process.c  cpu.utils.c  debug.c  dma.c  emu.c  gamepad.c  instructions.c  io.c  lcd.c  ppu.c  ppu.pipleline.c  ppu.sm.c  stack.c  timer.c
